exports[`<AnnotationPanel /> snapshot tests matches snapshot when an annotation is saved for a line 1`] = `
<div>
  <LineSnippet
    lineNumber={1}
    value="True" />
  <AnnotationEditor
    annotation="Wubba lubba dub dub!"
    closeAnnotation={[Function]}
    saveAnnotation={[Function]} />
</div>
`;

exports[`<AnnotationPanel /> snapshot tests matches snapshot when no annotation is saved for a line 1`] = `
<div>
  <LineSnippet
    lineNumber={1}
    value="True" />
  <AnnotationEditor
    annotation=""
    closeAnnotation={[Function]}
    saveAnnotation={[Function]} />
</div>
`;
